name:                ahp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/shakfu/polylab
license:             BSD3
license-file:        LICENSE
author:              S. Alireza
maintainer:          sa@me.org
copyright:           2017 SA
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
 hs-source-dirs:      src
 exposed-modules:     AHP
 build-depends:       base >= 4.7 && < 5
 default-language:    Haskell2010
 build-depends:       base >= 4.7 && < 5,
                      hmatrix >= 0.18.0.0
