[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "me", email = "me@example.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
demo = "demo:main"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[build-system]
requires = ["scikit-build-core>=0.10", "cython"]
build-backend = "scikit_build_core.build"
